--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,11 +9,12 @@ jobs:
     env:
       OS: linux
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@latest
       - name: Install graalvm
         uses: DeLaGuardo/setup-graalvm@3
         with:
-          graalvm-version: '20.0.0.java11'
+          graalvm: '22.1.0'
+          java: 'java11'
       - name: Install native-image
         run: gu install native-image
       - name: Build native executable
