--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       OS: linux
     steps:
-      - uses: actions/checkout@latest
+      - uses: actions/checkout@v2
       - name: Install graalvm
         uses: DeLaGuardo/setup-graalvm@3
         with:
