--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,8 +13,7 @@ jobs:
       - name: Install graalvm
         uses: DeLaGuardo/setup-graalvm@3
         with:
-          graalvm: '22.1.0'
-          java: 'java11'
+          graalvm-version: '22.1.0.java11'
       - name: Install native-image
         run: gu install native-image
       - name: Build native executable
