Updated github actions script

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,6 @@ jobs:
       - name: Build native executable
         run: ./gradlew build -Dquarkus.package.type=native
       - name: Update AWS lambda with native executable
-        run: sh build/manage.sh native update
+        run: bash build/manage.sh native update
         env:
           LAMBDA_ROLE_ARN: arn:aws:iam::256683732175:role/lambda-ex
