--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Build native executable
         run: ./gradlew build -Dquarkus.package.type=native
       - name: Update AWS lambda with native executable
-#        run: bash build/manage.sh update
-        run: sam deploy -t build/sam.native.yaml -g
+        run: bash build/manage.sh update
+#        run: sam deploy -t build/sam.native.yaml -g
         env:
           LAMBDA_ROLE_ARN: arn:aws:iam::256683732175:role/lambda-ex
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
