Added image generation code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.native.additional-build-args=--initialize-at-build-time=software.amazon.awssdk.core.retry.backoff.FullJitterBackoffStrategy
+quarkus.native.additional-build-args=--initialize-at-run-time=un.nio.ch.FileChannelImpl
 quarkus.native.resources.includes=fonts/**,images/**,schema/**
