--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-#quarkus.native.additional-build-args=--delay-class-initialization-to-runtime=sun.nio.ch.FileChannelImpl
+quarkus.native.additional-build-args=--delay-class-initialization-to-runtime=com.rush.cloud.betslip.common.SystemColor
 quarkus.native.resources.includes=fonts/**,images/**,schema/**
