Added image generation code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-quarkus.native.additional-build-args=--delay-class-initialization-to-runtime=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont
+quarkus.native.additional-build-args=--delay-class-initialization-to-runtime=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont\\,software.amazon.awssdk.services.s3.S3Client
 quarkus.native.resources.includes=fonts/**,images/**,schema/**
