--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,1 @@
-quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont\\,javax.management.MBeanServerFactory,--trace-object-instantiation=com.sun.jmx.mbeanserver.JmxMBeanServer
-quarkus.native.resources.includes=fonts/**,images/**,schema/**
+quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont
