Added image generation code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont
+quarkus.native.resources.includes=fonts/**,images/**,schema/**
