--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ repositories {
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
 //    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-amazon-services-bom:${quarkusPlatformVersion}")
+    implementation platform('software.amazon.awssdk:bom:2.17.227')
+    implementation 'software.amazon.awssdk:s3'
+
     implementation 'io.quarkus:quarkus-amazon-lambda'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-awt'
