Added image generation code

--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,18 @@ repositories {
 
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
-//    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-amazon-services-bom:${quarkusPlatformVersion}")
+    implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-amazon-services-bom:${quarkusPlatformVersion}")
+
     implementation platform('software.amazon.awssdk:bom:2.17.227')
-    implementation 'software.amazon.awssdk:s3'
+//    implementation 'software.amazon.awssdk:s3'
 
     implementation 'io.quarkus:quarkus-amazon-lambda'
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-awt'
-//    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-s3'
+    implementation 'io.quarkus:quarkus-apache-httpclient'
+
+    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-s3'
+    implementation 'software.amazon.awssdk:apache-client'
 //    implementation 'software.amazon.awssdk:url-connection-client'
     implementation 'software.amazon.lambda:powertools-validation:1.12.2'
 
