--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont\\,software.amazon.lambda.powertools.validation.ValidationUtils, --trace-object-instantiation=com.sun.jmx.mbeanserver.JmxMBeanServer
 quarkus.native.resources.includes=fonts/**,images/**,schema/**
+
+quarkus.s3.sync-client.type=apache
+quarkus.s3.aws.region=${AWS_S3_REGION:us-west-2}
