--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont\\,io.netty.buffer.AbstractByteBuf\\,io.netty.util.internal.PlatformDependent\\,io.netty.util.internal.SystemPropertyUtil\\,org.apache.logging.log4j.core.pattern.JAnsiTextRenderer, --trace-object-instantiation=com.sun.jmx.mbeanserver.JmxMBeanServer
+quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont, --trace-object-instantiation=com.sun.jmx.mbeanserver.JmxMBeanServer
 quarkus.native.resources.includes=fonts/**,images/**,schema/**
 
 quarkus.s3.sync-client.type=apache
 quarkus.s3.aws.region=${AWS_S3_REGION:us-west-2}
+
+#\\,io.netty.buffer.AbstractByteBuf\\,io.netty.util.internal.PlatformDependent\\,io.netty.util.internal.SystemPropertyUtil\\,org.apache.logging.log4j.core.pattern.JAnsiTextRenderer
