--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.native.additional-build-args=--link-at-build-time, --initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont\\,io.netty.buffer.AbstractByteBuf\\,io.netty.util.internal.PlatformDependent, --trace-object-instantiation=com.sun.jmx.mbeanserver.JmxMBeanServer
+quarkus.native.additional-build-args=--link-at-build-time, --initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont\\,io.netty.buffer.AbstractByteBuf\\,io.netty.util.internal.PlatformDependent\\,io.netty.util.internal.SystemPropertyUtil, --trace-object-instantiation=com.sun.jmx.mbeanserver.JmxMBeanServer
 quarkus.native.resources.includes=fonts/**,images/**,schema/**
 
 quarkus.s3.sync-client.type=apache
