--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation 'io.quarkiverse.amazonservices:quarkus-amazon-s3'
     implementation 'software.amazon.awssdk:apache-client'
 //    implementation 'software.amazon.awssdk:url-connection-client'
-    implementation 'software.amazon.lambda:powertools-validation:1.12.2'
+//    implementation 'software.amazon.lambda:powertools-validation:1.12.2'
 
     implementation 'org.apache.httpcomponents:httpcore'
 
