--- a/build.gradle
+++ b/build.gradle
@@ -15,24 +15,28 @@ dependencies {
     implementation platform('software.amazon.awssdk:bom:2.17.227')
 //    implementation 'software.amazon.awssdk:s3'
 
-    implementation 'io.quarkus:quarkus-amazon-lambda'
-    implementation 'io.quarkus:quarkus-awt'
-    implementation 'io.quarkus:quarkus-apache-httpclient'
+    implementation ('io.quarkus:quarkus-amazon-lambda')
+    implementation ('io.quarkus:quarkus-awt')
+    implementation ('io.quarkus:quarkus-apache-httpclient')
 
-    implementation 'io.quarkiverse.amazonservices:quarkus-amazon-s3'
-    implementation 'software.amazon.awssdk:apache-client'
+    implementation ('io.quarkiverse.amazonservices:quarkus-amazon-s3')
+    implementation ('software.amazon.awssdk:apache-client' )
 //    implementation 'software.amazon.awssdk:url-connection-client'
 //    implementation 'software.amazon.lambda:powertools-validation:1.12.2'
 
-    implementation 'org.apache.httpcomponents:httpcore'
-    implementation 'org.jboss.logging:commons-logging-jboss-logging'
+    implementation ('org.apache.httpcomponents:httpcore')
+    implementation ('org.jboss.logging:commons-logging-jboss-logging')
 
-    compileOnly 'org.projectlombok:lombok:1.18.24'
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
+    compileOnly ('org.projectlombok:lombok:1.18.24')
+    annotationProcessor ('org.projectlombok:lombok:1.18.24')
 
-    testImplementation 'io.quarkus:quarkus-junit5'
-    testImplementation 'io.rest-assured:rest-assured'
-    testImplementation 'com.approvaltests:approvaltests:16.0.1'
+    testImplementation ('io.quarkus:quarkus-junit5')
+    testImplementation ('io.rest-assured:rest-assured')
+    testImplementation ('com.approvaltests:approvaltests:16.0.1')
+}
+
+configurations.all {
+    exclude group: 'commons-logging', module: 'commons-logging'
 }
 
 group 'com.rush.cloud.betslip'
