--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,8 @@ quarkusPluginVersion=2.10.2.Final
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=2.10.2.Final
+
+awsSdkVersion=2.17.227
+lombokVersion=1.18.24
+
+approvalTestsVersion=16.0.1
