--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,4 @@ quarkus.native.resources.includes=fonts/**,images/**,schema/**
 quarkus.s3.sync-client.type=apache
 quarkus.s3.aws.region=${AWS_S3_REGION:us-west-2}
 
-
-#\\,io.netty.buffer.AbstractByteBuf\\,io.netty.util.internal.PlatformDependent\\,io.netty.util.internal.SystemPropertyUtil\\,org.apache.logging.log4j.core.pattern.JAnsiTextRenderer
+quarkus.banner.path=banner.txt
