--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java'
-    id 'io.quarkus'
+    id "java"
+    id "io.quarkus"
 }
 
 repositories {
@@ -12,35 +12,33 @@ dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation enforcedPlatform("${quarkusPlatformGroupId}:quarkus-amazon-services-bom:${quarkusPlatformVersion}")
 
-    implementation platform('software.amazon.awssdk:bom:2.17.227')
-//    implementation 'software.amazon.awssdk:s3'
+    implementation platform("software.amazon.awssdk:bom:${awsSdkVersion}")
 
-    implementation ('io.quarkus:quarkus-amazon-lambda')
-    implementation ('io.quarkus:quarkus-awt')
-    implementation ('io.quarkus:quarkus-apache-httpclient')
+    implementation ("io.quarkus:quarkus-amazon-lambda")
+    implementation ("io.quarkus:quarkus-awt")
+    implementation ("io.quarkus:quarkus-apache-httpclient")
+    implementation ("io.quarkus:quarkus-hibernate-validator")
 
-    implementation ('io.quarkiverse.amazonservices:quarkus-amazon-s3')
-    implementation ('software.amazon.awssdk:apache-client' )
-//    implementation 'software.amazon.awssdk:url-connection-client'
-//    implementation 'software.amazon.lambda:powertools-validation:1.12.2'
+    implementation ("io.quarkiverse.amazonservices:quarkus-amazon-s3")
+    implementation ("software.amazon.awssdk:apache-client" )
 
-    implementation ('org.apache.httpcomponents:httpcore')
-    implementation ('org.jboss.logging:commons-logging-jboss-logging')
+    implementation ("org.apache.httpcomponents:httpcore")
+    implementation ("org.jboss.logging:commons-logging-jboss-logging")
 
-    compileOnly ('org.projectlombok:lombok:1.18.24')
-    annotationProcessor ('org.projectlombok:lombok:1.18.24')
+    compileOnly ("org.projectlombok:lombok:${lombokVersion}")
+    annotationProcessor ("org.projectlombok:lombok:${lombokVersion}")
 
-    testImplementation ('io.quarkus:quarkus-junit5')
-    testImplementation ('io.rest-assured:rest-assured')
-    testImplementation ('com.approvaltests:approvaltests:16.0.1')
+    testImplementation ("io.quarkus:quarkus-junit5")
+    testImplementation ("io.rest-assured:rest-assured")
+    testImplementation ("com.approvaltests:approvaltests:${approvalTestsVersion}")
 }
 
 configurations.all {
-    exclude group: 'commons-logging', module: 'commons-logging'
+    exclude group: "commons-logging", module: "commons-logging"
 }
 
-group 'com.rush.cloud.betslip'
-version '1.0.0-SNAPSHOT'
+group "com.rush.cloud.betslip"
+version "1.0.0"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_11
@@ -48,10 +46,10 @@ java {
 }
 
 compileJava {
-    options.encoding = 'UTF-8'
-    options.compilerArgs << '-parameters'
+    options.encoding = "UTF-8"
+    options.compilerArgs << "-parameters"
 }
 
 compileTestJava {
-    options.encoding = 'UTF-8'
+    options.encoding = "UTF-8"
 }
