--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,9 +20,10 @@ jobs:
         run: ./gradlew build -Dquarkus.package.type=native -Dquarkus.native.container-build=true
       - name: Update AWS lambda with native executable
         run: bash build/manage.sh native update
-#        run: sam deploy -t build/sam.native.yaml -g
         env:
           LAMBDA_ROLE_ARN: arn:aws:iam::256683732175:role/lambda-ex
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_REGION: us-west-2
+          BETSLIP_BUCKET: betslip
