--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont, --trace-object-instantiation=com.sun.jmx.mbeanserver.JmxMBeanServer
+quarkus.native.additional-build-args=--initialize-at-run-time=com.rush.cloud.betslip.common.SystemColor\\,com.rush.cloud.betslip.common.SystemFont
 quarkus.native.resources.includes=fonts/**,images/**,schema/**
 
 quarkus.s3.sync-client.type=apache
